# face-alignment-CPP

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: .FaceDetectorOpencv.hpp.swp  FaceDetectorOpencv.hpp
src/: .FaceDetectorOpencv.cpp.swp  FaceDetectorOpencv.cpp
test/: face_alignment_cpp_Realtimetest.cpp  face_alignment_cpp_test.cpp
